--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,14 @@
 
+language: ruby
+rvm:
+  -2.3
+ 
+branches:
+  only:
+  - master
+  - batebates
+  
+ 
+addons:
+    code_climate:
+      repo_token: 3ad359967ad2924ee23cb4e0f0d10c98d6b9e1f9
